--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -1,13 +1,17 @@
 .landing {
+  font-family: "Didact Gothic", sans-serif;
   span {
     display: flex;
     align-items: center;
     flex-direction: column;
     left: 50%;
-    top: 50%;
+    top: 30%;
+    width: 100%;
     transform: translate(-50%, -50%);
     h1 {
       color: white;
+      font-size: 40px;
+      margin: 10px auto;
     }
     position: fixed;
     z-index: 1000;
@@ -31,7 +35,17 @@
 .slide3 {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 50%;
+  animation: appear 1s;
+  animation-fill-mode: forwards;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .slide1 {
   background: url(../../Images/bread1.jpg) no-repeat center;
