--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -1,11 +1,11 @@
 .landing {
   font-family: "Didact Gothic", sans-serif;
-  span {
+  .intro {
     display: flex;
     align-items: center;
     flex-direction: column;
     left: 50%;
-    top: 30%;
+    top: 25%;
     width: 100%;
     transform: translate(-50%, -50%);
     h1 {
@@ -14,22 +14,13 @@
       margin: 10px auto;
     }
     position: fixed;
-    z-index: 1000;
+    z-index: 100;
   }
-  .down-landing {
-    font-size: 70px;
-    position: absolute;
-    bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    color: black;
-    background: transparent;
-    z-index: 1000;
-    border: none;
+  nav {
+    height: 40px;
   }
 }
+
 .slide1,
 .slide2,
 .slide3 {
@@ -103,4 +94,43 @@
   100% {
     opacity: 0;
   }
+}
+
+.welcome {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 54%;
+  div {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    border-top: 2px solid brown;
+    border-bottom: 2px solid brown;
+    text-align: center;
+    padding: 15px;
+    h1 {
+      // padding-top: 10px;
+      font-size: 45px;
+    }
+    p {
+      align-self: center;
+      width: 500px;
+      font-size: 20px;
+      line-height: 1.5em;
+      padding: 15px 0;
+    }
+  }
+}
+.foot {
+  font-family: "Didact Gothic", sans-serif;
+  width: 100%;
+  background-color: brown;
+  opacity: 0.85;
+  height: 30px;
+  bottom: 0;
+  position: absolute;
+  text-align: center;
 }
