--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -1,48 +1,85 @@
 nav {
   font-family: "Didact Gothic", sans-serif;
   background-color: white;
+  border-bottom: 2px solid brown;
   width: 100%;
   position: fixed;
   font-size: 20px;
   z-index: 1000;
-  height: 40px;
+  height: 170px;
   display: flex;
   justify-content: center;
-  ul {
-    margin-top: 5px;
+  .drawerHidden {
     display: flex;
-  }
-  a {
-    color: black;
-    text-decoration: none;
-    margin: 0 10px;
-    &:hover {
-      color: brown;
+    align-items: center;
+    flex-direction: column;
+    img {
+      padding-bottom: 5px;
     }
   }
   button {
     display: none;
   }
-}
+  div {
+    margin-top: 5px;
+  }
+  a {
+    margin: 10px;
+    color: black;
+    text-decoration: none;
 
-@media (max-width: 700px) {
-  nav {
-    button {
-      background-color: white;
-      font-size: 20px;
-      position: absolute;
-      left: 10px;
-      border: none;
-      cursor: pointer;
-      margin-top: 3px;
-      display: flex;
+    &:hover {
+      color: brown;
     }
   }
-  .show {
-    transform: translate(0, 0);
-  }
+}
 
-  .hide {
-    transform: translate(0, -400px);
+@media (max-width: 800px) {
+  nav {
+    width: 0px;
+    height: 100vh;
+    button {
+      display: initial;
+      left: 10px;
+      border: none;
+      font-size: 20px;
+      height: 40px;
+      position: absolute;
+      z-index: 2;
+      background: transparent;
+      color: brown;
+      &:hover {
+        color: black;
+      }
+    }
+  }
+  .drawerOpen {
+    background: white;
+    height: 100%;
+    transition: 0.5s;
+    transform: translate(100px);
+    padding-left: 20px;
+    margin: 0 auto;
+    button {
+      top: 0px;
+      left: 180px;
+      font-size: 40px;
+      padding: 0;
+    }
+    .links {
+      transition: 0.3s;
+      width: 200px;
+      padding-top: 40px;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  .drawerHidden {
+    img {
+      display: none;
+    }
+    .links {
+      display: none;
+    }
   }
 }
