--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -8,16 +8,103 @@
     top: 25%;
     width: 100%;
     transform: translate(-50%, -50%);
+    position: fixed;
+    z-index: 100;
     h1 {
       color: white;
       font-size: 40px;
       margin: 10px auto;
     }
-    position: fixed;
-    z-index: 100;
   }
-  nav {
+  .navbar-landing {
+    font-family: "Didact Gothic", sans-serif;
+    background-color: white;
+    border-bottom: 2px solid brown;
+    width: 100%;
+    position: fixed;
+    font-size: 20px;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
     height: 40px;
+    .drawerHidden {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+    button {
+      display: none;
+    }
+    // div {
+    //   margin-top: 5px;
+    // }
+    .links {
+      margin-top: 5px;
+    }
+    a {
+      margin: 10px;
+      color: black;
+      text-decoration: none;
+
+      &:hover {
+        color: brown;
+      }
+    }
+  }
+
+  @media (max-width: 800px) {
+    .navbar-landing {
+      width: 0px;
+      height: 100vh;
+      button {
+        display: initial;
+        left: 10px;
+        border: none;
+        font-size: 20px;
+        height: 40px;
+        position: absolute;
+        z-index: 2;
+        background: transparent;
+        color: brown;
+        &:hover {
+          color: black;
+        }
+      }
+    }
+    .drawerOpen {
+      background: white;
+      height: 100%;
+      transition: 0.5s;
+      transform: translate(100px);
+      padding-left: 20px;
+      margin: 0;
+
+      button {
+        top: 0px;
+        left: 180px;
+        font-size: 40px;
+        padding: 0;
+      }
+      .links {
+        transition: 0.3s;
+        width: 200px;
+        padding-top: 40px;
+
+        display: flex;
+        flex-direction: column;
+        a {
+          padding: 10px;
+        }
+      }
+    }
+    .drawerHidden {
+      img {
+        display: none;
+      }
+      .links {
+        display: none;
+      }
+    }
   }
 }
 
@@ -112,7 +199,6 @@
     text-align: center;
     padding: 15px;
     h1 {
-      // padding-top: 10px;
       font-size: 45px;
     }
     p {
@@ -128,9 +214,34 @@
   font-family: "Didact Gothic", sans-serif;
   width: 100%;
   background-color: brown;
-  opacity: 0.85;
   height: 30px;
   bottom: 0;
-  position: absolute;
+  position: fixed;
   text-align: center;
+}
+
+@media (max-width: 550px) {
+  .landing {
+    .intro {
+      h1 {
+        font-size: 35px;
+        text-align: center;
+      }
+    }
+  }
+  .welcome {
+    top: 52%;
+    div {
+      border-top: 1px solid brown;
+      border-bottom: 1px solid brown;
+      padding: 0px;
+      h1 {
+        font-size: 45px;
+      }
+      p {
+        width: 100%;
+        padding: 10px;
+      }
+    }
+  }
 }
