fixing responsiveness for iphoneX

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -69,3 +69,14 @@
     }
   }
 }
+
+@media (max-width: 375px) {
+  .about-container {
+    .video {
+      iframe {
+        width: 375px;
+        height: 190px;
+      }
+    }
+  }
+}
