--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,11 +4,13 @@ footer {
   background-color: brown;
   height: 30px;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   div {
-    padding-top: 5px;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+
     width: 90%;
   }
   span a {
