responsive touch ups

--- a/src/Components/Blog/Blog.scss
+++ b/src/Components/Blog/Blog.scss
@@ -1,2 +1,20 @@
-#blog {
+.blog-container {
+  font-family: "Didact Gothic", sans-serif;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  line-height: 1.5em;
+  h1 {
+    font-size: 40px;
+  }
+  p {
+    line-height: 1.5em;
+    text-align: center;
+    font-size: 20px;
+    width: 800px;
+    padding: 20px;
+  }
 }
