--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -1,5 +1,6 @@
 .landing {
   font-family: "Didact Gothic", sans-serif;
+  height: 100vh;
   .intro {
     display: flex;
     align-items: center;
@@ -8,7 +9,7 @@
     top: 25%;
     width: 100%;
     transform: translate(-50%, -50%);
-    position: fixed;
+    position: absolute;
     z-index: 100;
     h1 {
       color: white;
@@ -110,7 +111,7 @@
 .slide3 {
   position: absolute;
   width: 100%;
-  height: 50%;
+  height: 350px;
   animation: appear 1s;
   animation-fill-mode: forwards;
 }
@@ -186,24 +187,26 @@
   position: absolute;
   justify-content: center;
   align-items: center;
-  top: 54%;
+  top: 355px;
   div {
     display: flex;
     flex-direction: column;
     width: 85%;
     border-top: 2px solid brown;
-    border-bottom: 2px solid brown;
     text-align: center;
-    padding: 15px;
+    margin: 20px 0;
+    padding: 10px;
     h1 {
+      padding-top: 10px;
       font-size: 45px;
     }
     p {
       align-self: center;
       width: 500px;
       font-size: 20px;
-      line-height: 1.3em;
+      line-height: 1.5em;
       padding: 15px 0;
+      margin-bottom: 10px;
     }
   }
 }
@@ -213,7 +216,7 @@
   background-color: brown;
   height: 30px;
   bottom: 0;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -243,15 +246,15 @@
     }
   }
   .welcome {
-    top: 52%;
     div {
       border-top: 1px solid brown;
-      border-bottom: 1px solid brown;
       padding: 0px;
+      margin-bottom: 25px;
       h1 {
-        font-size: 45px;
+        font-size: 35px;
       }
       p {
+        line-height: 1.2em;
         width: 100%;
         padding: 10px;
       }
