--- a/src/Components/Workshops/Workshops.scss
+++ b/src/Components/Workshops/Workshops.scss
@@ -87,15 +87,15 @@
   .workshops-list {
     width: 95%;
     div {
-      width: 95%;
+      width: 100%;
       display: flex;
       align-items: center;
-      padding: 15px 0 25px 0;
+
       margin: 0px;
       border-bottom: 1px solid brown;
       img {
-        width: 350px;
-        height: 350px;
+        width: 360px;
+        height: 360px;
       }
       span {
         p {
@@ -131,9 +131,10 @@
   }
 
   .workshops-list {
+    padding-top: 10px;
     div {
       flex-direction: column;
-      padding: 10px;
+      padding: 0px;
       margin-bottom: 5px;
       img {
         order: 1;
