--- a/src/Components/Workshops/Workshops.scss
+++ b/src/Components/Workshops/Workshops.scss
@@ -1,3 +1,6 @@
+#workshops {
+  width: 100%;
+}
 .workshop-container {
   font-family: "Didact Gothic", sans-serif;
   padding-top: 20px;
@@ -5,7 +8,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   line-height: 1.5em;
   h1 {
     font-size: 40px;
@@ -14,7 +16,7 @@
     line-height: 1.5em;
     text-align: center;
     font-size: 20px;
-    width: 800px;
+    width: 90%;
     padding: 20px;
   }
 }
@@ -38,12 +40,13 @@
   margin-bottom: 20px;
 }
 .workshops-list {
+  width: 95%;
   font-family: "Didact Gothic", sans-serif;
   div {
-    padding: 20px 0 30px 0;
+    padding: 30px 10px;
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    align-items: center;
     border-bottom: 2px solid brown;
     span {
       display: flex;
@@ -58,7 +61,6 @@
       p {
         text-align: start;
         font-size: 20px;
-        width: 700px;
       }
     }
     img {
@@ -85,12 +87,9 @@
     width: 95%;
   }
   .workshops-list {
-    width: 95%;
     div {
-      width: 100%;
       display: flex;
       align-items: center;
-
       margin: 0px;
       border-bottom: 1px solid brown;
       img {
@@ -100,18 +99,16 @@
       span {
         p {
           font-size: 19px;
-          width: 90%;
         }
       }
     }
   }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
   .workshop-container {
     p {
       font-size: 18px;
-      width: 90%;
     }
   }
   .order-container {
@@ -131,11 +128,11 @@
   }
 
   .workshops-list {
-    padding-top: 10px;
+    // padding-top: 10px;
     div {
       flex-direction: column;
-      padding: 0px;
-      margin-bottom: 5px;
+      padding: 20px 0;
+      // margin-bottom: 5px;
       img {
         order: 1;
         width: 350px;
@@ -149,7 +146,6 @@
         }
         p {
           font-size: 18px;
-          width: 90%;
         }
       }
     }
