--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -14,7 +14,7 @@
       text-align: center;
       padding: 5px;
       width: 100%;
-      background-color: brown;
+      background-color: rgb(199, 158, 104);
     }
     h2 {
       font-size: 30px;
