--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -50,9 +50,9 @@
         border-radius: 5px;
       }
       a {
-        background: brown;
+        background: rgb(199, 158, 104);
         color: white;
-        border: 1px solid brown;
+        border: 1px solid rgb(199, 158, 104);
         border-radius: 5px;
         text-decoration: none;
         padding: 5px;
@@ -74,7 +74,7 @@
         text-align: center;
         text-decoration: none;
         h6 {
-          color: brown;
+          color: rgb(199, 158, 104);
         }
       }
       span {
@@ -82,7 +82,7 @@
       }
       p {
         h6 {
-          color: brown;
+          color: rgb(199, 158, 104);
         }
       }
     }
