--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 footer {
   font-family: "Didact Gothic", sans-serif;
   width: 100%;
-  background-color: brown;
+  background-color: rgb(199, 158, 104);
   height: 30px;
   color: white;
   display: flex;
