--- a/src/Components/Locations/Locations.scss
+++ b/src/Components/Locations/Locations.scss
@@ -27,7 +27,7 @@
     width: 400px;
     h6 {
       font-size: 20px;
-      color: brown;
+      color: rgb(199, 158, 104);
       font-weight: bold;
     }
     li {
@@ -44,7 +44,7 @@
   width: 95%;
   h5 {
     font-size: 20px;
-    color: brown;
+    color: rgb(199, 158, 104);
     font-weight: bold;
     padding-bottom: 10px;
     text-align: center;
