--- a/src/Components/MainImage/MainImage.scss
+++ b/src/Components/MainImage/MainImage.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 85%;
   padding: 20px 0 15px 0;
-  border-bottom: 2px solid brown;
+  border-bottom: 2px solid rgb(199, 158, 104);
   margin: 0 auto;
   img {
     margin: 0 auto;
