--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -1,7 +1,7 @@
 nav {
   font-family: "Didact Gothic", sans-serif;
   background-color: white;
-  border-bottom: 2px solid brown;
+  border-bottom: 2px solid rgb(199, 158, 104);
   width: 100%;
   position: fixed;
   font-size: 20px;
@@ -26,7 +26,7 @@ nav {
     text-decoration: none;
 
     &:hover {
-      color: brown;
+      color: rgb(199, 158, 104);
     }
   }
 }
@@ -44,7 +44,7 @@ nav {
       position: absolute;
       z-index: 2;
       background: transparent;
-      color: brown;
+      color: rgb(199, 158, 104);
       &:hover {
         color: black;
       }
