--- a/src/Components/Workshops/Workshops.scss
+++ b/src/Components/Workshops/Workshops.scss
@@ -1,6 +1,3 @@
-#workshops {
-  width: 100%;
-}
 .workshop-container {
   font-family: "Didact Gothic", sans-serif;
   padding-top: 20px;
@@ -16,7 +13,6 @@
     line-height: 1.5em;
     text-align: center;
     font-size: 20px;
-    width: 90%;
     padding: 20px;
   }
 }
@@ -25,7 +21,7 @@
   font-size: 20px;
   width: 850px;
   p {
-    color: brown;
+    color: rgb(199, 158, 104);
     font-weight: bold;
     padding: 0;
     ul {
@@ -47,7 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid brown;
+    border-bottom: 2px solid rgb(199, 158, 104);
     span {
       display: flex;
       flex-direction: column;
@@ -55,7 +51,7 @@
       align-items: center;
       h6 {
         font-weight: bold;
-        color: brown;
+        color: rgb(199, 158, 104);
         font-size: 30px;
       }
       p {
@@ -89,9 +85,9 @@
   .workshops-list {
     div {
       display: flex;
-      align-items: center;
+      align-self: center;
       margin: 0px;
-      border-bottom: 1px solid brown;
+      border-bottom: 1px solid rgb(199, 158, 104);
       img {
         width: 360px;
         height: 360px;
@@ -128,11 +124,9 @@
   }
 
   .workshops-list {
-    // padding-top: 10px;
     div {
       flex-direction: column;
       padding: 20px 0;
-      // margin-bottom: 5px;
       img {
         order: 1;
         width: 350px;
