--- a/src/Components/Workshops/Workshops.scss
+++ b/src/Components/Workshops/Workshops.scss
@@ -36,6 +36,10 @@
   margin-bottom: 20px;
 }
 .workshops-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 95%;
   font-family: "Didact Gothic", sans-serif;
   div {
