--- a/src/Components/Landing/Landing.scss
+++ b/src/Components/Landing/Landing.scss
@@ -11,6 +11,7 @@
     transform: translate(-50%, -50%);
     position: absolute;
     z-index: 100;
+    position: absolute;
     h1 {
       color: white;
       font-size: 40px;
@@ -111,7 +112,7 @@
 .slide3 {
   position: absolute;
   width: 100%;
-  height: 350px;
+  height: 50%;
   animation: appear 1s;
   animation-fill-mode: forwards;
 }
@@ -187,7 +188,7 @@
   position: absolute;
   justify-content: center;
   align-items: center;
-  top: 355px;
+  top: 50%;
   div {
     display: flex;
     flex-direction: column;
